--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: List files in the repository
         run: |
             ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: echo "🍏 This job's status is: ${{ job.status }}."
       # Trigger an approval request via Microsoft Teams
       - uses: jamesridgway/github-actions-approval-request@main
         with:
